# CppMath

./: .gitignore  CMakeLists.txt  test.cpp
Integer/: Integer.cpp  Integer.h  test.cpp
Learning Notes/: string与int的转化.md  函数参数默认值.md  友元函数.md  模版类、函数的使用.md
Matrix/: Matrix.cpp.impl
Real/: Real.cpp  Real.h
discrete math/: discrete_math.h
include/: Complex.h  Integer.h  LinearAlgebra.cpp.impl  LinearAlgebra.h  LinearAlgebra.impl  Matrix.cpp.impl  Matrix.h  MyMath.h  Real.h  discrete_math.cpp.impl  discrete_math.h
src/: CMakeLists.txt  Integer.cpp  Real.cpp
src/BigNumber/: CMakeLists.txt  Integer.cpp  Real.cpp
