cmake_minimum_required(VERSION 3.0.0)
project(Calculator VERSION 0.1.0 LANGUAGES C CXX)
set(CMAKE_BUILD_TYPE Debug)
include_directories(./include)
add_subdirectory(src)
link_libraries(BigNumber)
set(LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
add_executable(test test.cpp)